<resources>
    <string name="app_name">HydroApp</string>
    <!-- Headings -->
    <string name="heading_register">Sign Up</string>
    <string name="heading_signIn">Sign In</string>
    <string name="heading_weather">Weather</string>
    <string name="heading_about">About Us</string>
    <string name="heading_help">Help</string>
    <string name="heading_dashboard">Dashboard</string>

    <!-- Sub-Headings -->
    <string name="about_project">The Project</string>
    <string name="about_team">Team Hydro</string>
    <string name="about_structure">Our Structure</string>
    <string name="dashboard_temp">Temperature:</string>
    <string name="dashboard_tds">TDS Sensor:</string>
    <string name="dashboard_water_level">Water Level:</string>

    <!-- Buttons -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_dashboard">Dashboard</string>
    <string name="button_weather">Weather</string>
    <string name="button_about">About Us</string>
    <string name="button_help">Help</string>
    <string name="button_menu">Menu</string>
    <string name="button_redirect">Don’t have an account? Sign up</string>
    <string name="button_flags">Team Flags</string>
    <string name="button_view">View Dashboard</string>

    <!-- Text -->
    <string name="welcome_text">Welcome to the</string>
    <string name="app_text">App Menu!</string>
    <string name="user_text">Current User:</string>
    <string name="help_text">"\u2022If you do not have an account, please register instead of logging in. \nThis function will not work for new users. \n\n\u2022The dashboard will not be accessible without an Internet connection.\nThe NodeRed dashboard will open in Chrome. You can close this tab after viewing the dashboard, and continue using the app from the dashboard screen. \n\n\u2022The weather screen is strict with spelling, so to view all data, you will have to correctly type your city name for region-specific results. Should your area not yield any results, please search the nearest city for the closest possible results. \n\n\u2022For more help/clarity regarding the app, feel free to drop us an email with your query at queries@hydroponix.co.za."</string>
    <string name="weather_text">Get</string>
    <string name="dashboard_text">"Humidity \t\tTemperature \t\tTDS \t\tWater \t\tLight \t\tBattery"</string>
    <string name="project_text">Two universities joined forces to develop a DIY hydroponics system intended for use by a disadvantaged rural school in Bela-Bela, Limpopo.</string>
    <string name="team_text">Our team, Team Hydro, took charge of designing the structure, addressing water-related challenges, and developing this mobile application.</string>
    <string name="structure_text">\u2022The hydroponics system comprises a sturdy plastic reservoir positioned at its base. \n\n\u2022Above the reservoir, a framework crafted from white PVC pipes and connectors forms the structure reminiscent of a wick hydroponics system. \n\n\u2022Adorning the upper frame are vibrant, multicolored 3D-printed cups, thoughtfully designed to cradle seedlings securely in the nutrient-rich water without risk of overflooding, ensuring optimal distribution of nutrients. \n\n\u2022Notably, a valve is strategically attached to one of the horizontal pipes, affording precise control over the flow of water within the system.</string>
    <string name="temp_text">The temperature of the area where the system is placed. The system must remain at an optimal temperature to promote plant growth and to avoid damage.</string>
    <string name="tds_sensor_text">TDS (Total Dissolved Solids) is the measure of water quality. This is determined by the amount of nutrients that have dissolved into the water, and is represented by the conductivity of the solution.</string>
    <string name="water_level_text">This is a direct indication of the amount of milliliters (ml) of water that are actively in the system. This is crucial, since it is an indicator of when to refill the system, or when it may be overflowing.</string>

    <!-- Hints -->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="cpassword_hint">Confirm Password</string>
    <string name="city_hint">Enter City Name</string>
    <string name="countryCode_hint">Enter Country Code (optional)</string>

</resources>