<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SignUpPage">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_signIn"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/tvSignIn"
        android:background="@drawable/textview_gradient"
        android:hint="@string/username_hint"
        android:textColorHint="@color/text_colour"
        android:textColor="@color/text_colour"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="45dp"
        android:padding="28dp"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="28dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/etUsername"
        android:background="@drawable/textview_gradient"
        android:hint="@string/password_hint"
        android:textColorHint="@color/text_colour"
        android:textColor="@color/text_colour"
        android:layout_margin="5dp"
        android:padding="28dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="28dp"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:textSize="25sp"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_gradient"
        app:backgroundTint="@null"/>

    <TextView
        android:id="@+id/tvRedirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/button_redirect"
        android:textColor="@color/text_colour"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>